[package]
name = "cli-tools"
version = "0.0.1"
edition = "2021"
authors = [ "Torimune29 <71534350+Torimune29@users.noreply.github.com>" ]
license = "MIT"
repository = "https://github.com/Torimune29/cli-tools"
description = "cli tools"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
panic = 'abort'



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }

